--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "next": "16.1.6",
     "nodemailer": "^8.0.0",
     "react": "19.2.3",
